syntax = "proto3";

package auth;
option go_package = ".";

// Service definition
service AuthService {
  rpc Login (LoginRequest) returns (LoginResponse);
  rpc Register (RegisterRequest) returns (RegisterResponse);
}

// Messages
message LoginRequest {
  string email = 1;
  string password = 2;
  string wa_number = 3;
}

message LoginResponse {
  string token = 1;
  string message = 2;
}

message RegisterRequest {
  string username = 1;
  string password = 2;
  string email = 3;
  string wa_number = 4;
}

message RegisterResponse {
  string user_id = 1;
  string message = 2;
}
